--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -16,18 +16,11 @@ h1, h2, h3, h4, h5, p {
 #taskInput {
   padding: 5px;
   background-color: transparent;
-  border: 1px solid white;
-  width: 60%;
+  border: none;
+  border-bottom: 1px solid white;
+  width: 90%;
   height: 30px;
-  border-radius: 5px;
   color: #fff;
-}
-#taskButton {
-  padding: 5px;
-  background-color: #fff;
-  border: 1px solid white;
-  border-radius: 5px;
-  cursor: pointer; 
 }
 .container-fluid {
   padding: 10px;
